--- a/The Battle of Neighborhoods (week 1).ipynb
+++ b/The Battle of Neighborhoods (week 1).ipynb
@@ -46,8 +46,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **Question 2:**\n",
-    "#####"
+    "#### **Question 2:**  \n",
+    "##### Describe the data that you will be using to solve the problem or execute your idea. Remember that you will need to use the Foursquare location data to solve the problem or execute your idea. You can absolutely use other datasets in combination with the Foursquare location data. So make sure that you provide adequate explanation and discussion, with examples, of the data that you will be using, even if it is only Foursquare location data. This submission will eventually become your Data section in your final report. So I recommend that you push the report (having your Data section) to your Github repository and submit a link to it."
    ]
   },
   {
